--- a/src/css/blog/Art/_tree.scss
+++ b/src/css/blog/Art/_tree.scss
@@ -1,13 +1,11 @@
 .tree{
-    @include border;
+    @include border(red);
     display: flex;
     align-items: center;
     flex-direction: column;
     width: 200px;
     height: 500px;
-    // position: absolute;
     margin-right: -100px;
-    // margin-top: 100px;
     box-shadow: -5px 5px 19px 5px $color1;
     border-radius: 10px;
     
