--- a/src/css/blog/Homepage/_articles.scss
+++ b/src/css/blog/Homepage/_articles.scss
@@ -1,15 +1,16 @@
 .articles {
-  @include border;
+  @include border(green);
   width: 100vw;
-  height: 900px;
+  height: 700px;
   display: grid;
+  margin: 0 0 200px 0;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   text-align: center;
 
   .h2 {
     grid-area: 1/1;
-    margin: 150px 0vh 0px 150px;
+    margin: 0px 0vh 0px 150px;
     color: orange;
     width: 360px;
     height: fit-content;
@@ -17,8 +18,8 @@
     word-wrap: wrap;
     text-align: center;
     position: relative;
-    top: 100px;
-    @include border;
+    top: 50px;
+    @include border(red);
 
     & > .h2_1 {
       font-size: 2rem;
@@ -31,24 +32,13 @@
     }
   }
   p {
-    @include border;
+    @include border(gold);
     width: 40vw;
     height: 200px;
-    margin: 10vh 40px;
+    margin: 0vh 40px;
     font-size: 15px;
     padding: 2rem;
     grid-area: 2/1;
-  }
-
-  &__art {
-    width: 50vw;
-    height: 400px;
-    position: relative;
-    top: 40vh;
-    right: 200px;
-    display: flex;
-    flex-direction: row;
-    @include border;
   }
 
   .buttons {
@@ -56,7 +46,7 @@
     flex-direction: row;
     text-align: left;
     width: 400px;
-    height: 30vh;
+    height: 100px;
     justify-content: center;
     padding: 1rem;
     margin-top: 20px;
