--- a/src/css/blog/Homepage/_counselling.scss
+++ b/src/css/blog/Homepage/_counselling.scss
@@ -4,12 +4,12 @@
   background: black;
   margin-top: 2vh;
   color: #fff;
-  @include border;
+  @include border(blue);
 
   &__header {
     height: 300px;
     width: 100%;
-    @include border;
+    @include border(red);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -23,8 +23,7 @@
       align-items: center;
       justify-content: center;
       position: relative;
-      //   animation: showBorder 1s ease-in-out forwards 1s;
-      @include border;
+      @include border(gold);
       h1 {
         font-size: 2rem;
         font-weight: 100;
@@ -46,7 +45,6 @@
           margin-right: 10px;
           position: relative;
           top: 100px;
-          //   animation: feelingDisp .5s ease-in forwards;
         }
       }
       h2 {
@@ -57,7 +55,7 @@
 
   &__body {
     width: inherit;
-    @include border;
+    @include border(green);
     height: 500px;
     background: url("../../pics/Counselling.jpg") no-repeat;
     background-size: cover;
@@ -73,6 +71,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      @include border(pink);
 
       h2 {
         font-size: 2rem;
