--- a/src/css/blog/_config.scss
+++ b/src/css/blog/_config.scss
@@ -11,8 +11,8 @@ $bg: #23343b;
 $primary: #fa8d31;
 $secondary: #94a4a5;
 
-@mixin border() {
-  // border: 1px solid red;
+@mixin border($color) {
+  border: 2px solid transparent;
 }
 
 @mixin shadow($color) {
