--- a/src/css/blog/_nav.scss
+++ b/src/css/blog/_nav.scss
@@ -6,13 +6,13 @@
   height: 100px;
   flex-direction: row;
   justify-content: space-between;
-  @include border;
+  @include border(pink);
   padding: 1rem;
   background: #fff;
   color: $orange;
 
   &__list {
-    @include border;
+    @include border(red);
     width: 650px;
     height: 80px;
     padding: 0.3rem;
@@ -23,7 +23,7 @@
       align-items: flex-start;
       justify-content: space-around;
       padding: 0.5rem;
-      @include border;
+      @include border(blue);
 
       li {
         list-style-type: none;
