--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -17,10 +17,12 @@
   height: 100px;
   flex-direction: row;
   justify-content: space-between;
+  border: 2px solid transparent;
   padding: 1rem;
   background: #fff;
   color: #f6d342; }
   .nav__list {
+    border: 2px solid transparent;
     width: 650px;
     height: 80px;
     padding: 0.3rem; }
@@ -29,7 +31,8 @@
       flex-direction: row;
       align-items: flex-start;
       justify-content: space-around;
-      padding: 0.5rem; }
+      padding: 0.5rem;
+      border: 2px solid transparent; }
       .nav__list__con li {
         list-style-type: none;
         cursor: pointer;
@@ -49,7 +52,7 @@
   width: 100vw;
   height: 600px;
   color: #fff;
-  margin: 5vh 0;
+  margin: 1vh 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -119,6 +122,7 @@
     width: 100%; }
 
 .paragraph_1 {
+  border: 2px solid transparent;
   width: 100vw;
   height: 700px;
   background: url("../../pics/Union 1.png");
@@ -128,6 +132,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr); }
   .paragraph_1 p {
+    border: 2px solid transparent;
     width: 43vw;
     height: 400px;
     margin: 5vh 40px;
@@ -160,13 +165,15 @@
     left: 200px;
     display: flex;
     flex-direction: column;
-    grid-area: 1/2; }
+    grid-area: 1/2;
+    border: 2px solid transparent; }
     .paragraph_1__art .clouds {
       width: inherit;
       height: 200px;
       display: flex;
       justify-content: flex-end;
-      flex-direction: row; }
+      flex-direction: row;
+      border: 2px solid transparent; }
       .paragraph_1__art .clouds .cloud {
         background: transparent; }
     .paragraph_1__art .trees {
@@ -188,10 +195,12 @@
     justify-content: space-evenly;
     padding: 1rem;
     margin-top: 20px;
+    border: 2px solid transparent;
     border-radius: 1rem;
     flex-wrap: wrap-reverse; }
 
 .tree {
+  border: 2px solid transparent;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -213,15 +222,17 @@
     bottom: 15vh; }
 
 .articles {
+  border: 2px solid transparent;
   width: 100vw;
-  height: 900px;
+  height: 700px;
   display: grid;
+  margin: 0 0 200px 0;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   text-align: center; }
   .articles .h2 {
     grid-area: 1/1;
-    margin: 150px 0vh 0px 150px;
+    margin: 0px 0vh 0px 150px;
     color: orange;
     width: 360px;
     height: fit-content;
@@ -229,7 +240,8 @@
     word-wrap: wrap;
     text-align: center;
     position: relative;
-    top: 100px; }
+    top: 50px;
+    border: 2px solid transparent; }
     .articles .h2 > .h2_1 {
       font-size: 2rem;
       font-weight: 100;
@@ -237,26 +249,19 @@
     .articles .h2 > .h2_2 {
       font-size: 5rem; }
   .articles p {
+    border: 2px solid transparent;
     width: 40vw;
     height: 200px;
-    margin: 10vh 40px;
+    margin: 0vh 40px;
     font-size: 15px;
     padding: 2rem;
     grid-area: 2/1; }
-  .articles__art {
-    width: 50vw;
-    height: 400px;
-    position: relative;
-    top: 40vh;
-    right: 200px;
-    display: flex;
-    flex-direction: row; }
   .articles .buttons {
     display: flex;
     flex-direction: row;
     text-align: left;
     width: 400px;
-    height: 30vh;
+    height: 100px;
     justify-content: center;
     padding: 1rem;
     margin-top: 20px;
@@ -269,10 +274,12 @@
   height: 650px;
   position: relative;
   overflow: hidden;
-  transition: All 1s ease forwards; }
+  transition: All 1s ease forwards;
+  border: 2px solid transparent; }
   .shopping__slider {
     width: inherit;
     height: inherit;
+    border: 2px solid transparent;
     position: relative;
     overflow: hidden;
     transition: all 1s ease-in; }
@@ -284,7 +291,8 @@
       height: inherit;
       position: absolute;
       animation: showUp 3s ease-in forwards;
-      border: 1px solid #fff; }
+      border: 1px solid #fff;
+      border: 2px solid transparent; }
       .shopping__slider__one h2 {
         font-size: 4rem; }
     .shopping__slider .shop-section-1 {
@@ -303,6 +311,7 @@
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(3, 1fr); }
       .shopping__slider .shop-section-2 .childTwoHeader {
+        border: 2px solid transparent;
         grid-area: 2/3;
         width: 350px;
         height: 150px;
@@ -326,6 +335,7 @@
       position: relative;
       animation: moveRight 2s ease 4s forwards infinite; }
   .shopping__paragraph {
+    border: 2px solid transparent;
     grid-area: 2 / 3;
     padding: 2rem 1rem;
     height: 450px;
@@ -361,10 +371,12 @@
   height: 800px;
   background: black;
   margin-top: 2vh;
-  color: #fff; }
+  color: #fff;
+  border: 2px solid transparent; }
   .counselling__header {
     height: 300px;
     width: 100%;
+    border: 2px solid transparent;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -376,7 +388,8 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      position: relative; }
+      position: relative;
+      border: 2px solid transparent; }
       .counselling__header__name h1 {
         font-size: 2rem;
         font-weight: 100;
@@ -407,6 +420,7 @@
         color: #34a2e2; }
   .counselling__body {
     width: inherit;
+    border: 2px solid transparent;
     height: 500px;
     background: url("../../pics/Counselling.jpg") no-repeat;
     background-size: cover;
@@ -420,7 +434,8 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center; }
+      align-items: center;
+      border: 2px solid transparent; }
       .counselling__body__intro h2 {
         font-size: 2rem; }
       .counselling__body__intro h1 {
@@ -545,7 +560,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: linear-gradient(to right, #0689c4, #159dc6); }
+  background-color: linear-gradient(to right, #0689c4, #159dc6);
+  border: 2px solid transparent; }
   .register__pic {
     width: 50%;
     height: 500px;
@@ -553,6 +569,7 @@
     background-image: url("../../pics/Counselling.jpg");
     clip-path: polygon(50% 100%, 100% 50%, 100% 0%, 0% 0%);
     border: 3px solid #ffd700;
+    border: 2px solid transparent;
     animation: shapeChange 10s ease alternate 1s infinite; }
     .register__pic img {
       width: 400px;
@@ -567,16 +584,19 @@
     .register__forms__signIn {
       width: 50vw;
       height: inherit;
+      border: 2px solid transparent;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center; }
       .register__forms__signIn__header {
+        border: 2px solid transparent;
         font-size: 1.5rem;
         padding: 1rem;
         width: inherit;
         height: fit-content; }
       .register__forms__signIn form {
+        border: 2px solid transparent;
         width: 400px;
         height: fit-content;
         padding: 2rem; }
@@ -802,7 +822,8 @@ body {
     transform: rotate(360deg); } }
 
 @keyframes shapeChange {
-  0%, 10% {
+  0%,
+  10% {
     clip-path: polygon(50% 100%, 100% 50%, 100% 0%, 0% 0%);
     border: 3px solid #ffd700; }
   15%,
