--- a/src/css/blog/Articlespage/_articlePage__body.scss
+++ b/src/css/blog/Articlespage/_articlePage__body.scss
@@ -1,5 +1,45 @@
-.article-nav-main{
-  @include border(red);
+.article-nav-main {
+  @include border();
+  padding: 1rem;
+
+  .article-nav {
+    @include border();
+
+    &__ul {
+      @include border();
+      display: flex;
+      flex-direction: row;
+
+      &__elem {
+        background: none;
+        font-size: 1rem;
+        border: none;
+        padding-left: 1rem;
+        cursor: pointer;
+        color: blue;
+        width: fit-content;
+        padding: 1rem;
+        transition: all .5s ease-in;
+
+        &:focus{
+          color: rgb(255, 187, 0);
+          border-bottom: 2px solid rgb(255, 187, 0);; 
+        }
+      }
+    }
+  }
+}
+
+.articles-body__heading {
+  @include border();
+  padding: 1rem 2rem;
+
+  &__text {
+    @include border();
+    color: rgb(255, 187, 0);
+    // the capitalize property is used in React instead
+    // text-transform: capitalize;
+  }
 }
 
 .articlesBox {
