--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -17,12 +17,12 @@
   height: 100px;
   flex-direction: row;
   justify-content: space-between;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   padding: 1rem;
   background: #fff;
   color: #f6d342; }
   .nav__list {
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     width: 650px;
     height: 80px;
     padding: 0.3rem; }
@@ -32,7 +32,7 @@
       align-items: flex-start;
       justify-content: space-around;
       padding: 0.5rem;
-      border: 2px solid transparent; }
+      border: 1px solid transparent; }
       .nav__list__con li {
         list-style-type: none;
         cursor: pointer;
@@ -122,7 +122,7 @@
     width: 100%; }
 
 .paragraph_1 {
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   width: 100vw;
   height: 700px;
   background: url("../../pics/Union 1.png");
@@ -132,7 +132,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr); }
   .paragraph_1 p {
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     width: 43vw;
     height: 400px;
     margin: 5vh 40px;
@@ -166,14 +166,14 @@
     display: flex;
     flex-direction: column;
     grid-area: 1/2;
-    border: 2px solid transparent; }
+    border: 1px solid transparent; }
     .paragraph_1__art .clouds {
       width: inherit;
       height: 200px;
       display: flex;
       justify-content: flex-end;
       flex-direction: row;
-      border: 2px solid transparent; }
+      border: 1px solid transparent; }
       .paragraph_1__art .clouds .cloud {
         background: transparent; }
     .paragraph_1__art .trees {
@@ -195,12 +195,12 @@
     justify-content: space-evenly;
     padding: 1rem;
     margin-top: 20px;
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     border-radius: 1rem;
     flex-wrap: wrap-reverse; }
 
 .tree {
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -222,7 +222,7 @@
     bottom: 15vh; }
 
 .articles {
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   width: 100vw;
   height: 700px;
   display: grid;
@@ -240,8 +240,8 @@
     word-wrap: wrap;
     text-align: center;
     position: relative;
-    top: 50px;
-    border: 2px solid transparent; }
+    top: 100px;
+    border: 1px solid transparent; }
     .articles .h2 > .h2_1 {
       font-size: 2rem;
       font-weight: 100;
@@ -249,13 +249,22 @@
     .articles .h2 > .h2_2 {
       font-size: 5rem; }
   .articles p {
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     width: 40vw;
     height: 200px;
     margin: 0vh 40px;
     font-size: 15px;
     padding: 2rem;
     grid-area: 2/1; }
+  .articles__art {
+    width: 50vw;
+    height: 400px;
+    position: relative;
+    top: 40vh;
+    right: 200px;
+    display: flex;
+    flex-direction: row;
+    border: 1px solid transparent; }
   .articles .buttons {
     display: flex;
     flex-direction: row;
@@ -275,11 +284,11 @@
   position: relative;
   overflow: hidden;
   transition: All 1s ease forwards;
-  border: 2px solid transparent; }
+  border: 1px solid transparent; }
   .shopping__slider {
     width: inherit;
     height: inherit;
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     position: relative;
     overflow: hidden;
     transition: all 1s ease-in; }
@@ -292,7 +301,7 @@
       position: absolute;
       animation: showUp 3s ease-in forwards;
       border: 1px solid #fff;
-      border: 2px solid transparent; }
+      border: 1px solid transparent; }
       .shopping__slider__one h2 {
         font-size: 4rem; }
     .shopping__slider .shop-section-1 {
@@ -311,7 +320,7 @@
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(3, 1fr); }
       .shopping__slider .shop-section-2 .childTwoHeader {
-        border: 2px solid transparent;
+        border: 1px solid transparent;
         grid-area: 2/3;
         width: 350px;
         height: 150px;
@@ -335,7 +344,7 @@
       position: relative;
       animation: moveRight 2s ease 4s forwards infinite; }
   .shopping__paragraph {
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     grid-area: 2 / 3;
     padding: 2rem 1rem;
     height: 450px;
@@ -372,11 +381,11 @@
   background: black;
   margin-top: 2vh;
   color: #fff;
-  border: 2px solid transparent; }
+  border: 1px solid transparent; }
   .counselling__header {
     height: 300px;
     width: 100%;
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -389,7 +398,7 @@
       align-items: center;
       justify-content: center;
       position: relative;
-      border: 2px solid transparent; }
+      border: 1px solid transparent; }
       .counselling__header__name h1 {
         font-size: 2rem;
         font-weight: 100;
@@ -420,7 +429,7 @@
         color: #34a2e2; }
   .counselling__body {
     width: inherit;
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     height: 500px;
     background: url("../../pics/Counselling.jpg") no-repeat;
     background-size: cover;
@@ -530,7 +539,37 @@
       height: 30px;
       background: grey; }
 
-.trending {
+.article-nav-main {
+  border: 1px solid transparent;
+  padding: 1rem; }
+  .article-nav-main .article-nav {
+    border: 1px solid transparent; }
+    .article-nav-main .article-nav__ul {
+      border: 1px solid transparent;
+      display: flex;
+      flex-direction: row; }
+      .article-nav-main .article-nav__ul__elem {
+        background: none;
+        font-size: 1rem;
+        border: none;
+        padding-left: 1rem;
+        cursor: pointer;
+        color: blue;
+        width: fit-content;
+        padding: 1rem;
+        transition: all .5s ease-in; }
+        .article-nav-main .article-nav__ul__elem:focus {
+          color: #ffbb00;
+          border-bottom: 2px solid #ffbb00; }
+
+.articles-body__heading {
+  border: 1px solid transparent;
+  padding: 1rem 2rem; }
+  .articles-body__heading h2 {
+    border: 1px solid transparent;
+    color: #ffbb00; }
+
+.articlesBox {
   width: 90vw;
   height: fit-content;
   padding: 1rem;
@@ -539,12 +578,12 @@
   flex-direction: column;
   flex-wrap: wrap-reverse;
   overflow: hidden; }
-  .trending__body {
+  .articlesBox__body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding: 1rem; }
-    .trending__body .item {
+    .articlesBox__body .item {
       width: 200px;
       height: 250px;
       padding: 1rem;
@@ -561,7 +600,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: linear-gradient(to right, #0689c4, #159dc6);
-  border: 2px solid transparent; }
+  border: 1px solid transparent; }
   .register__pic {
     width: 50%;
     height: 500px;
@@ -569,7 +608,7 @@
     background-image: url("../../pics/Counselling.jpg");
     clip-path: polygon(50% 100%, 100% 50%, 100% 0%, 0% 0%);
     border: 3px solid #ffd700;
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     animation: shapeChange 10s ease alternate 1s infinite; }
     .register__pic img {
       width: 400px;
@@ -590,13 +629,13 @@
       justify-content: center;
       align-items: center; }
       .register__forms__signIn__header {
-        border: 2px solid transparent;
+        border: 1px solid transparent;
         font-size: 1.5rem;
         padding: 1rem;
         width: inherit;
         height: fit-content; }
       .register__forms__signIn form {
-        border: 2px solid transparent;
+        border: 1px solid transparent;
         width: 400px;
         height: fit-content;
         padding: 2rem; }
@@ -700,7 +739,8 @@
   box-sizing: border-box; }
 
 body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+ "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   overflow-x: hidden; }
   body .move-right {
     animation: moveRight 1s ease forwards infinite; }
