--- a/src/css/blog/Articlespage/_articlePage__body.scss
+++ b/src/css/blog/Articlespage/_articlePage__body.scss
@@ -19,10 +19,12 @@
         color: blue;
         width: fit-content;
         padding: 1rem;
+        outline: none;
         transition: all .5s ease-in;
 
         &:focus{
           color: rgb(255, 187, 0);
+          outline: none;
           border-bottom: 2px solid rgb(255, 187, 0);; 
         }
       }
@@ -55,16 +57,33 @@
   &__body {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-start;
     padding: 1rem;
 
     .item {
       width: 200px;
       height: 250px;
-      padding: 1rem;
+      // padding: 1rem;
       margin: 10px;
       border-radius: 5px;
+      display: flex;
+      flex-direction: column;
       box-shadow: 1px 2px 10px 1px rgb(187, 187, 187);
+      @include border;
+      border-top: 5px solid #663399;
+
+      &__image{
+        height: 100px;
+        @include border();
+      }
+      &__desc{
+        @include border();
+        padding: 1rem;
+        height: 150px;
+        h3{
+          font-size: 1rem;
+        }
+      }
     }
   }
 }
