--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -558,7 +558,7 @@
         width: fit-content;
         padding: 1rem;
         outline: none;
-        transition: all .5s ease-in; }
+        transition: all 0.5s ease-in; }
         .article-nav-main .article-nav__ul__elem:focus {
           color: #ffbb00;
           outline: none;
@@ -586,24 +586,109 @@
     justify-content: flex-start;
     padding: 1rem; }
     .articlesBox__body .item {
-      width: 200px;
+      width: 230px;
       height: 250px;
-      margin: 10px;
+      margin: 10px 20px;
       border-radius: 5px;
       display: flex;
       flex-direction: column;
       box-shadow: 1px 2px 10px 1px #bbbbbb;
       border: 1px solid transparent;
+      cursor: pointer;
       border-top: 5px solid #663399; }
       .articlesBox__body .item__image {
         height: 100px;
-        border: 1px solid transparent; }
+        border: 1px solid transparent;
+        background: orange; }
       .articlesBox__body .item__desc {
         border: 1px solid transparent;
         padding: 1rem;
-        height: 150px; }
+        height: 150px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between; }
+        .articlesBox__body .item__desc h2 {
+          word-wrap: break-word;
+          border: 1px solid transparent; }
         .articlesBox__body .item__desc h3 {
-          font-size: 1rem; }
+          font-size: 0.8rem;
+          font-weight: 100;
+          border: 1px solid transparent; }
+      .articlesBox__body .item__read__link {
+        width: inherit;
+        height: fit-content; }
+        .articlesBox__body .item__read__link button {
+          background: none;
+          margin: 0 auto;
+          color: orange;
+          width: 130px;
+          border: none;
+          padding: 0.5rem;
+          cursor: pointer; }
+
+.article-viewer {
+  position: fixed;
+  top: 0;
+  width: 99vw;
+  background: #fff;
+  height: 500px;
+  border: 1px solid transparent;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 0.5fr 2fr; }
+  .article-viewer__desc {
+    grid-area: 1/1;
+    border: 1px solid transparent;
+    height: 150px;
+    width: 200px;
+    background: orange;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    position: relative; }
+    .article-viewer__desc__content {
+      display: flex;
+      flex-direction: column;
+      padding: 1rem; }
+      .article-viewer__desc__content__desc {
+        margin-left: 20px;
+        display: flex;
+        flex-direction: column; }
+        .article-viewer__desc__content__desc h3 {
+          font-size: 1rem;
+          font-weight: 100; }
+        .article-viewer__desc__content__desc h2 {
+          margin-left: 10px;
+          font-weight: 900;
+          border: 1px solid transparent; }
+  .article-viewer__main {
+    position: relative;
+    grid-area: 1/2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow-y: scroll;
+    border: 1px solid transparent; }
+    .article-viewer__main__head {
+      border: 1px solid transparent;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100px;
+      padding: 1rem; }
+      .article-viewer__main__head h2 {
+        font-size: 2rem;
+        text-transform: capitalize; }
+      .article-viewer__main__head h3 {
+        font-weight: 100;
+        font-size: 0.8rem; }
+    .article-viewer__main p {
+      width: 700px;
+      margin: 20px auto;
+      border: 1px solid transparent; }
 
 .register {
   width: 100vw;
