--- a/src/css/blog/Articlespage/_articlePage__body.scss
+++ b/src/css/blog/Articlespage/_articlePage__body.scss
@@ -39,6 +39,7 @@
   &__text {
     @include border();
     color: rgb(255, 187, 0);
+    text-decoration: underline;
     // the capitalize property is used in React instead
     // text-transform: capitalize;
   }
@@ -52,13 +53,17 @@
   margin: auto auto;
   flex-direction: column;
   flex-wrap: wrap-reverse;
-  overflow: hidden;
-
+  // overflow: scroll;
+  
   &__body {
     display: flex;
+    // width: 800px;
+    height: 600px;
     flex-direction: row;
     justify-content: flex-start;
+    flex-wrap: wrap;
     padding: 1rem;
+    // overflow: scroll;
 
     .item {
       width: 230px;
@@ -67,7 +72,7 @@
       border-radius: 5px;
       display: flex;
       flex-direction: column;
-      box-shadow: 1px 2px 10px 1px rgb(187, 187, 187);
+      box-shadow: 1px 2px 20px 1px rgb(187, 187, 187);
       @include border;
       cursor: pointer;
       border-top: 5px solid #663399;
@@ -75,7 +80,7 @@
       &__image {
         height: 100px;
         @include border();
-        background: orange;
+        background: royalblue;
       }
       &__desc {
         @include border();
@@ -121,13 +126,15 @@
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 0.5fr 2fr;
+  z-index: 600;
 
   &__desc {
     grid-area: 1/1;
     @include border();
-    height: 150px;
-    width: 200px;
+    height: 40px;
+    width: 50px;
     background: orange;
+    box-shadow: 2px 2px 30px 2px lighten(orange, 30%);
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -151,6 +158,7 @@
         h2 {
           margin-left: 10px;
           font-weight: 900;
+          font-size: 1.2rem;
           @include border();
         }
       }
@@ -170,10 +178,16 @@
       @include border();
       display: flex;
       flex-direction: column;
-      align-items: center;
+      // align-items: center;
+      color: #fff;
       justify-content: center;
       height: 100px;
       padding: 1rem;
+      box-shadow: 1px 2px 12px 2px lighten(royalblue, 30%);
+      background: linear-gradient(to right, #663399, royalblue);
+      animation: showBack 2s ease forwards;
+      transition: all 1s ease;
+      // margin: 0 0 00px 0;
       h2 {
         font-size: 2rem;
         text-transform: capitalize;
