--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -293,7 +293,7 @@
     overflow: hidden;
     transition: all 1s ease-in; }
     .shopping__slider__one {
-      background: url("../../pics/3511858.jpg"), linear-gradient(to right, #0689c4, rebeccapurple, #159dc6);
+      background: linear-gradient(to right, #0689c4, rebeccapurple);
       background-size: cover;
       color: #fff;
       width: 100vw;
@@ -569,7 +569,8 @@
   padding: 1rem 2rem; }
   .articles-body__heading__text {
     border: 1px solid transparent;
-    color: #ffbb00; }
+    color: #ffbb00;
+    text-decoration: underline; }
 
 .articlesBox {
   width: 90vw;
@@ -578,12 +579,13 @@
   display: flex;
   margin: auto auto;
   flex-direction: column;
-  flex-wrap: wrap-reverse;
-  overflow: hidden; }
+  flex-wrap: wrap-reverse; }
   .articlesBox__body {
     display: flex;
+    height: 600px;
     flex-direction: row;
     justify-content: flex-start;
+    flex-wrap: wrap;
     padding: 1rem; }
     .articlesBox__body .item {
       width: 230px;
@@ -592,14 +594,14 @@
       border-radius: 5px;
       display: flex;
       flex-direction: column;
-      box-shadow: 1px 2px 10px 1px #bbbbbb;
+      box-shadow: 1px 2px 20px 1px #bbbbbb;
       border: 1px solid transparent;
       cursor: pointer;
       border-top: 5px solid #663399; }
       .articlesBox__body .item__image {
         height: 100px;
         border: 1px solid transparent;
-        background: orange; }
+        background: royalblue; }
       .articlesBox__body .item__desc {
         border: 1px solid transparent;
         padding: 1rem;
@@ -635,13 +637,15 @@
   border: 1px solid transparent;
   display: grid;
   grid-template-rows: 1fr;
-  grid-template-columns: 0.5fr 2fr; }
+  grid-template-columns: 0.5fr 2fr;
+  z-index: 600; }
   .article-viewer__desc {
     grid-area: 1/1;
     border: 1px solid transparent;
-    height: 150px;
-    width: 200px;
+    height: 40px;
+    width: 50px;
     background: orange;
+    box-shadow: 2px 2px 30px 2px #ffdb99;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -662,6 +666,7 @@
         .article-viewer__desc__content__desc h2 {
           margin-left: 10px;
           font-weight: 900;
+          font-size: 1.2rem;
           border: 1px solid transparent; }
   .article-viewer__main {
     position: relative;
@@ -675,10 +680,14 @@
       border: 1px solid transparent;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      color: #fff;
       justify-content: center;
       height: 100px;
-      padding: 1rem; }
+      padding: 1rem;
+      box-shadow: 1px 2px 12px 2px #c5d1f6;
+      background: linear-gradient(to right, #663399, royalblue);
+      animation: showBack 2s ease forwards;
+      transition: all 1s ease; }
       .article-viewer__main__head h2 {
         font-size: 2rem;
         text-transform: capitalize; }
@@ -898,6 +907,25 @@ body {
   body .otherPageHeaders {
     width: 100vw;
     height: 300px; }
+  body .dimensionChange {
+    position: relative;
+    animation: dimensionChange 2s ease-in forwards 4s; }
+
+@keyframes dimensionChange {
+  0% { }
+  10%, 50% {
+    width: 250px; }
+  51%, 100% {
+    width: 250px;
+    height: 130px; } }
+
+@keyframes showBack {
+  0% {
+    width: 0; }
+  50% {
+    width: 50%; }
+  100% {
+    width: 100%; } }
 
 @keyframes moveRight {
   25% {
