--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -573,7 +573,7 @@
     text-decoration: underline; }
 
 .articlesBox {
-  width: 90vw;
+  width: 99vw;
   height: fit-content;
   padding: 1rem;
   display: flex;
@@ -582,7 +582,8 @@
   flex-wrap: wrap-reverse; }
   .articlesBox__body {
     display: flex;
-    height: 600px;
+    width: 96vw;
+    height: fit-content;
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
@@ -590,7 +591,7 @@
     .articlesBox__body .item {
       width: 230px;
       height: 250px;
-      margin: 10px 20px;
+      margin: 10px 50px 20px 0px;
       border-radius: 5px;
       display: flex;
       flex-direction: column;
@@ -913,9 +914,11 @@ body {
 
 @keyframes dimensionChange {
   0% { }
-  10%, 50% {
+  10%,
+  50% {
     width: 250px; }
-  51%, 100% {
+  51%,
+  100% {
     width: 250px;
     height: 130px; } }
 
