--- a/src/css/blog/main.scss
+++ b/src/css/blog/main.scss
@@ -74,21 +74,22 @@ body {
     height: 300px;
   }
 
-  .dimensionChange{
+  .dimensionChange {
     position: relative;
     animation: dimensionChange 2s ease-in forwards 4s;
   }
 
-  @keyframes dimensionChange{
-    0%{
-
+  @keyframes dimensionChange {
+    0% {
     }
 
-    10%,50% {
+    10%,
+    50% {
       width: 250px;
     }
 
-    51%, 100%{
+    51%,
+    100% {
       width: 250px;
       height: 130px;
     }
@@ -98,12 +99,13 @@ body {
       width: 0;
     }
 
-    50%{
+    50% {
       width: 50%;
     }
     100% {
       width: 100%;
-    }}
+    }
+  }
   @keyframes moveRight {
     25% {
       position: relative;
