--- a/src/css/blog/Homepage/_articles.scss
+++ b/src/css/blog/Homepage/_articles.scss
@@ -3,14 +3,16 @@
   width: 100vw;
   height: 700px;
   display: grid;
-  margin: 0 0 200px 0;
+  // margin: 0 0 200px 0;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows:  1fr;
   text-align: center;
+  
+
 
   .h2 {
     grid-area: 1/1;
-    margin: 0px 0vh 0px 150px;
+    margin: 0 0 0 150px;
     color: orange;
     width: 360px;
     height: fit-content;
@@ -35,10 +37,10 @@
     @include border(gold);
     width: 40vw;
     height: 200px;
-    margin: 0vh 40px;
+    margin: 250px 40px;
     font-size: 15px;
     padding: 2rem;
-    grid-area: 2/1;
+    grid-area: 1/1;
   }
 
   .buttons {
@@ -52,5 +54,22 @@
     margin-top: 20px;
     border-radius: 1rem;
     flex-wrap: wrap-reverse;
+  }
+
+  &-author{
+    @include border(red);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
+    margin: auto;
+    background: lightblue;
+    border-radius: 100%;
+    width: 90%;
+    // clip-path: ellipse();
+    img{
+
+      z-index: 200;
+    }
   }
 }
