--- a/src/css/blog/Homepage/_header.scss
+++ b/src/css/blog/Homepage/_header.scss
@@ -13,7 +13,7 @@
     font-size: 3rem;
     margin: 0px auto;
     position: relative;
-    color: $secondary-blue;
+    color: $orange;
     grid-area: 2/1;
     z-index: 100;
     b {
