--- a/src/css/blog/Homepage/_shopping.scss
+++ b/src/css/blog/Homepage/_shopping.scss
@@ -1,7 +1,7 @@
 .shopping {
   // background: #f4f4f4;
   width: 100vw;
-  height: 650px;
+  height: 750px;
   position: relative;
   overflow: hidden;
   transition: All 1s ease forwards;
@@ -25,6 +25,8 @@
       @include border(blue);
       h2 {
         font-size: 4rem;
+        width: 100%;
+        @include border(red);
         color: deepskyblue;
       }
     }
@@ -47,12 +49,13 @@
         @include border(blue);
         grid-area: 2/3;
         width: 350px;
-        height: 150px;
-        padding: 1rem;
+        height: 220px;
         align-items: center;
         margin: 0vh auto;
         h2 {
-          font-size: 3rem;
+          font-size: 4rem;
+          width: 100%;
+          @include border(cyan);
         }
       }
     }
@@ -70,7 +73,8 @@
     left: -100px;
     background: linear-gradient(to right,  orange,red,);
     border-radius: 0 40px 40px 0;
-    clip-path: polygon(100% 100%, 100% 00%, 20% 0%, 0% 100%);
+    // clip-path: polygon(100% 100%, 100% 00%, 20% 0%, 0% 100%);
+    box-shadow: 2px 2px 20px 3px lighten(orange, 10%);
 
     img {
       position: relative;
@@ -84,9 +88,17 @@
     padding: 2rem 1rem;
     height: 450px;
     position: relative;
-    top: 5vh;
+    bottom: 200px;
     right: 200px;
     margin: 0vh 5vh;
+
+    &__text{
+      @include border(blue);
+      width: 500px;
+      height: 200px;
+      padding: 1rem;
+      text-align: center;
+    }
   }
   &__button {
     display: flex;
